updated a few items

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-realworld-example-app",
-  "short_name": "vue-realworld-example-app",
+  "name": "www.hashtables.net",
+  "short_name": "hashtables",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
