--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "author": "Emmanuel Vilsbol <emmanuel@vilsbol.com>",
+  "author": "David <david@hashtables.net>",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
     "marked": "^0.7.0",
     "register-service-worker": "^1.6.2",
@@ -10,7 +11,7 @@
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
-  "description": "TodoMVC for the RealWorld™",
+  "description": "Hash Tables Front End",
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
@@ -43,12 +44,13 @@
       "git add"
     ]
   },
-  "name": "realworld-vue",
+  "name": "www.hashtables.net",
   "scripts": {
     "build": "cross-env BABEL_ENV=dev vue-cli-service build",
     "lint": "vue-cli-service lint",
     "serve": "cross-env BABEL_ENV=dev vue-cli-service serve",
-    "test": "cross-env BABEL_ENV=test jest --coverage"
+    "test": "cross-env BABEL_ENV=test jest --coverage",
+    "scss": "node-sass --watch scss -o public/css"
   },
   "version": "0.1.0"
 }
